<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UserCreateActivity">


    <EditText
        android:id="@+id/txtName"
        android:layout_width="353dp"
        android:layout_height="52dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_tarea_cod_vivienda"
        android:layout_width="63dp"
        android:layout_height="53dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/hint_tarea_cod_vivienda"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_tarea_manzana"
        android:layout_width="122dp"
        android:layout_height="49dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/hint_tarea_manzana"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_tarea_direccion" />

    <EditText
        android:id="@+id/txt_tarea_direccion"
        android:layout_width="345dp"
        android:layout_height="54dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="30dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/hint_tarea_direccion"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_tarea_cod_vivienda" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="358dp"
        android:layout_height="45dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="25dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLastName" />

    <EditText
        android:id="@+id/txtLastName"
        android:layout_width="356dp"
        android:layout_height="49dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="27dp"
        android:ems="10"
        android:hint="@string/lastname"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="109dp"
        android:layout_height="51dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="56dp"
        android:text="@string/btnAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="56dp"
        android:onClick="regresar"
        android:text="@string/btnPrev"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAdd" />
</androidx.constraintlayout.widget.ConstraintLayout>